# fastapi-boilerplate

./: Pipfile  main.py  pyproject.toml
app/: main.py  schemas.py
app/api/: __init__.py
app/api/routers/: products.py
app/tests/: conftest.py  test_api.py
presentation/: router.py
presentation/endpoint/product/: api.py
