[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "A FastAPI application with SQLAlchemy"
authors = ["Hyeonku Kang <rkdgusrnrlrl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.1"
sqlalchemy = "^2.0.32"

[tool.poetry.dev-dependencies]
uvicorn = "^0.30.6"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
